# recipe

./: Cargo.toml  README.md  application.yml
src/: main.rs
src/recipe/: mod.rs  recipe_info.rs  recipe_scores.rs  service.rs
src/utils/: application_config.rs  mod.rs
src/web/: mod.rs  web_service.rs
