[package]
name = "the-recipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
axum = { version = "0.6.18", features = ["ws"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "all-types",
    "macros",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml="0.9.21"
nanoid = "0.4.0"
lazy_static="1.4.0"
anyhow = "1.0.71"